; ModuleID = '/home/carl/AnghaBench/git/extr_quote.c_sq_quote_argv_pretty.c'
source_filename = "/home/carl/AnghaBench/git/extr_quote.c_sq_quote_argv_pretty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sq_quote_argv_pretty(%struct.strbuf* %0, i8** %1) #0 {
  %3 = alloca %struct.strbuf*, align 8
  %4 = alloca i8**, align 8
  store %struct.strbuf* %0, %struct.strbuf** %3, align 8
  store i8** %1, i8*** %4, align 8
  %5 = load i8**, i8*** %4, align 8
  %6 = getelementptr inbounds i8*, i8** %5, i64 0
  %7 = load i8*, i8** %6, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %11 = call i32 @strbuf_addch(%struct.strbuf* %10, i8 signext 32)
  br label %12

12:                                               ; preds = %9, %2
  %13 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %14 = load i8**, i8*** %4, align 8
  %15 = call i32 @sq_append_quote_argv_pretty(%struct.strbuf* %13, i8** %14)
  ret void
}

declare dso_local i32 @strbuf_addch(%struct.strbuf*, i8 signext) #1

declare dso_local i32 @sq_append_quote_argv_pretty(%struct.strbuf*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
